# dc01-esp32

./: .cproject  .gitattributes  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  README_CN.md  partitions.csv  sdkconfig  sdkconfig.old
common_components/iot_eth/: CMakeLists.txt  idf_component.yml  iot_eth.c  iot_eth_netif_glue.c
common_components/iot_eth/include/: iot_eth.h  iot_eth_netif_glue.h  iot_eth_types.h
common_components/iot_eth/interface/: iot_eth_interface.h
common_components/iot_usbh_modem/: idf_component.yml
common_components/iot_usbh_rndis/: CHANGELOG.md  CMakeLists.txt  idf_component.yml  iot_usbh_rndis.c  iot_usbh_rndis_descriptor.c
common_components/nimble_central_utils/: esp_central.h  misc.c  peer.c
main/: .gitignore  CMakeLists.txt  Kconfig.projbuild  aht20.c  aht20.h  app_main.c  bat_adc.c  bat_adc.h  ble_central_util.c  ble_central_util.h  ble_prph_util.c  ble_prph_util.h  ble_util.c  camera_util.c  camera_util.h  ch423.c  ch423.h  cloud_log.h  comm_util.c  comm_util.h  config_upload_util.c  config_upload_util.h  device_config.c  device_config.h  ethernet_util.c  ethernet_util.h  forward_util.c  forward_util.h  gpio_util.c  gpio_util.h  i2cutil.c  i2cutil.h  idf_component.yml  lora_util.c  lora_util.h  meta_util.c  meta_util.h  module_4g_util.c  module_4g_util.h  mqtt_util.c  (+21 more)
main/driver/ble/: common.h  gap.c  gap.h  gatt_svc.c
main/driver/lora/: llcc68.c  llcc68.h  llcc68_board.c  llcc68_board.h  radio.c  radio.h
main/driver/mlx90640/: MLX90640_API.c  MLX90640_I2C_Driver.c  MLX90640_I2C_Driver.h
(+14 files in other folders)
